--- a/wp-proekt-frontend/src/components/App/App.css
+++ b/wp-proekt-frontend/src/components/App/App.css
@@ -7,11 +7,13 @@
   pointer-events: none;
 }
 
+/*
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
+*/
 
 .App-header {
   background-color: #282c34;
@@ -34,5 +36,31 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+.professors {
+  height: 70px;
+}
+
+.students {
+  height: 300px;
+}
+
+.studentsPagination{
+  position: absolute;
+  bottom: 5px;
+  width: 95%;
+}
+
+@media screen and (max-width: 767px) {
+  .students {
+    height: 300px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .students {
+    height: 380px;
   }
 }
