--- a/wp-proekt-frontend/src/components/App/App.css
+++ b/wp-proekt-frontend/src/components/App/App.css
@@ -43,26 +43,27 @@
   height: 70px;
 }
 
-.students {
-  height: 300px;
-}
-
 .studentsPagination{
   position: absolute;
   bottom: 5px;
   width: 95%;
 }
 
+.students {
+  height: 370px;
+  padding: 20px;
+}
+
 @media screen and (max-width: 767px) {
   .students {
-    height: 300px;
+    height: 490px;
+    padding: 20px;
   }
 }
 
-@media screen and (max-width: 360px) {
-  .students {
-    height: 380px;
-  }
+.note {
+  height: 150px;
+  overflow-y: auto;
 }
 
 #backToTopBtn {
@@ -71,4 +72,8 @@
   bottom: 20px; /* Place the button at the bottom of the page */
   right: 30px; /* Place the button 30px from the right */
   z-index: 99; /* Make sure it does not overlap */
+}
+
+html {
+  overflow-y: scroll; /* To prevent scrollbar from repositioning the web page */
 }
